--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ django-heroku==0.3.1
 djangorestframework==3.10.3
 gunicorn==19.9.0
 psycopg2==2.8.3
+python-dotenv==0.10.3
 pytz==2019.1
 sqlparse==0.3.0
-whitenoise==4.1.4
 requests==2.22.0
+whitenoise==4.1.4
